No funciona el secondURL

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,10 +5,9 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-	<form name="myForm" action="/urlServlet" method="get">
-	<input id="numb">
-	<button type="button" onclick="myFunction()">Submit</button>
-	<p id="demo"></p>
+	<form name="loginForm" method="post" action="urlServlet">
+	    Username: <input type="text" name="username"/> <br/>
+    	    <input type="submit" value="Login" />
 	</form>
 
 	<script> 
