Ya funciona el html para hacer peticiones a la página

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,8 +5,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-	<form name="loginForm" method="post" action="urlServlet">
-	    Username: <input type="text" name="username"/> <br/>
+	<form name="loginForm" method="get" action="http://localhost:8080/secondServlet">
+	    Username: <input type="text" name="name"/> <br/>
     	    <input type="submit" value="Login" />
 	</form>
 
